create points system

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main></main>
     <script src="./blocks/basicBlock.js"></script>
     <script src="./canvas/canvas.js"></script>
+    <script src="./canvas/pointsSystem.js"></script>
     <script src="./blocks/threeSnake.js"></script>
     <script src="./blocks/littleStairToRight.js"></script>
     <script src="./blocks/littleStairToLeft.js"></script>
