some html in-line styles (wip)

--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <meta charset="utf-8" />
   </head>
-  <body>
-    <main></main>
+  <body style="background-color: black;">
+    <div style="
+    display: flex;
+    justify-content: center;
+    ">
+      <h1 style="color: green; font-family: monospace;"> Vim-Tetris <h1>
+    </div>
+    <div style="
+    display: flex;
+    justify-content: center;
+    ">
+    <main style="border: 1px solid green;"></main>
+    </div>
     <script src="./blocks/basicBlock.js"></script>
     <script src="./canvas/canvas.js"></script>
     <script src="./canvas/pointsSystem.js"></script>
